force-app/main/default/objects/Onboarding_Request__c/Onboarding_Request__c.object-meta.xml
<CustomObject>
    <description
  >Represents a customer onboarding request raised by an advisor or partner channel for Bedrock Financial. Used by the Bedrock DevSecOps demo to showcase end-to-end Salesforce delivery.</description>
    <label>Onboarding Request</label>
    <nameField>
        <displayFormat>ONB-{00000}</displayFormat>
        <label>Onboarding Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>