force-app/main/default/objects/Onboarding_Request__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description
  >Bedrock division that owns the onboarding request.</description>
    <label>Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bedrock Financial</fullName>
                <default>true</default>
                <label>Bedrock Financial</label>
            </value>
            <value>
                <fullName>Bedrock Healthcare</fullName>
            </value>
            <value>
                <fullName>Bedrock Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>