force-app/main/default/objects/Onboarding_Request__c/fields/Net_Worth_Tier__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Tier__c</fullName>
    <description
  >Approximate net-worth tier of the prospective customer. Drives onboarding journey variant and priority.</description>
    <label>Net Worth Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass Affluent</fullName>
                <default>true</default>
                <label>Mass Affluent</label>
            </value>
            <value>
                <fullName>High Net Worth</fullName>
            </value>
            <value>
                <fullName>Ultra High Net Worth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>