force-app/main/default/objects/Onboarding_Request__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description
  >Computed compliance/KYC risk score 0-100. Higher score = more scrutiny required.</description>
    <label>Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>