force-app/main/default/objects/Onboarding_Request__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <description
  >Origin of the onboarding lead. Supports the Bedrock channel/partner outreach strategy.</description>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Referral</fullName>
                <default>true</default>
                <label>Advisor Referral</label>
            </value>
            <value>
                <fullName>Partner Channel</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>SMS Campaign</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>