force-app/main/default/objects/Onboarding_Request__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the onboarding request was submitted.</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>